# PointerSearcher-X

./: Cargo.toml  faq-zh.md  readme-zh-hans.md  readme.md
conv/: Cargo.toml
conv/src/: main.rs  pince.rs
dumper/: Cargo.toml
dumper/src/: chain.rs  cmd.rs  dump.rs  utils.rs
ffi/: .gitignore  example.c  main.c  ptrsx.h  ptrsx.py
ffi/src/: ffi_types.rs  lib.rs
inject/: Cargo.toml
inject/src/: lib.rs
ptrscan/: Cargo.toml
ptrscan/src/: lib.rs
ptrsx/: Cargo.toml
ptrsx/src/: bin.rs  check.rs  dump.rs  lib.rs  mapping_filter.rs  pointer_scan.rs  ptrsx_d.rs  ptrsx_s.rs  search.rs  try_trait.rs
scanner/: Cargo.toml
scanner/src/: cmd.rs  scan.rs  utils.rs
vmmap/: Cargo.toml
vmmap/src/: error.rs  lib.rs
vmmap/src/linux/: proc.rs
vmmap/src/macos/: cmd.rs  mod.rs  pp.rs  proc64.rs
vmmap/src/windows/: proc64.rs
wiki/: 1.md  en.md  zh.md
