[package]
name = "ptrscan"
version = "1.0.0"
edition = "2021"
authors = ["kk <kekelanact@gmail.com>"]
description = "Pointer chain scanner"
keywords = ["no_std", "pointer scan", "pointer chain"]
license = "MIT"
repository = "https://github.com/kekeimiku/PointerSearcher-X/"

[features]
default = []
nightly = []
